Remove fixed top on mobile devices

--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -27,8 +27,13 @@
 }
 
 .logo{
-    width:130px;
-    height: 130px;
+    width:120px;
+    height: 120px;
+
+    @include media-breakpoint-down(xs) { 
+        width: 90px;
+        height: 90px;
+    }
 }
 
 .cities-container{
@@ -75,6 +80,11 @@ nav{
     opacity: 350;
     animation: fadeIn 1s ease-in both;
     box-shadow: 0px 1px 10px lightgrey;
+
+    @include media-breakpoint-down(xs) { 
+        position: relative;
+    }
+
 }
 
 @keyframes fadeIn {
