--- a/scss/styles.css
+++ b/scss/styles.css
@@ -46,8 +46,15 @@ iframe {
 }
 
 .logo {
-  width: 130px;
-  height: 130px;
+  width: 120px;
+  height: 120px;
+}
+
+@media (max-width: 575.98px) {
+  .logo {
+    width: 90px;
+    height: 90px;
+  }
 }
 
 .cities-container {
@@ -110,6 +117,12 @@ nav {
           animation: fadeIn 1s ease-in both;
   -webkit-box-shadow: 0px 1px 10px lightgrey;
           box-shadow: 0px 1px 10px lightgrey;
+}
+
+@media (max-width: 575.98px) {
+  .fixed-top {
+    position: relative;
+  }
 }
 
 @-webkit-keyframes fadeIn {
